--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.9.1"
-credentialsManagerVersion = "1.5.0-alpha05"
+credentialsManagerVersion = "1.5.0"
 firebaseBom = "34.0.0"
 googleid = "1.1.1"
 kotlin = "2.0.21"
